--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.10.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-gmaps": "^1.5.0",
     "react-router": "^2.1.1"
   },
   "devDependencies": {
